# Currency_service

./: .gitignore  README.md  pyproject.toml
service/: __main__.py  api.py  cli.py  logging_config.py  provider.py  rates_fetcher.py  rates_url.py  storage.py  utils.py
service/api/: app.py  lifespan.py  middleware.py
service/storage/: config_storage.py  money_storage.py  rates_storage.py
service/tasks/: monitor_amounts.py  rates_fetcher.py
