[tool.poetry]
name = "currency-service"
version = "0.1.0"
description = ""
authors = ["Dmitry_Perexozhev <perexozhev99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pycountry = "^24.6.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
