[tool.poetry]
name = "currency-service"
version = "0.1.0"
description = ""
authors = ["Dmitry_Perexozhev <perexozhev99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
flake8 = "^7.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
